--- a/my bio/n1.css
+++ b/my bio/n1.css
@@ -15,14 +15,14 @@
   width: 200px;
   height: 200px;
   background-color: rgb(0, 4, 255);
-  margin-top: 300px;
+  bottom: 700px;
+  position: relative;
 }
 
-.box-4 {
+.box-2 {
   width: 200px;
   height: 200px;
-  background-color: rgb(159, 194, 206);
-  left: 1335px;
-  bottom: 30px;
+  background-color: rgb(25, 160, 39);
+  margin-top: 500px;
   position: relative;
 }
