--- a/my bio/n2.css
+++ b/my bio/n2.css
@@ -15,7 +15,9 @@
   width: 200px;
   height: 200px;
   background-color: rgb(0, 4, 255);
-  bottom: 230px;
+  bottom: 1590px;
+  left: 1135px;
+  z-index: 10;
   position: relative;
 }
 
@@ -23,8 +25,19 @@
   width: 200px;
   height: 200px;
   background-color: rgb(25, 160, 39);
-  left: 1335px;
+  left: 1135px;
   bottom: 30px;
-  margin-top: 150px;
+  margin-top: 530px;
+  z-index: 10;
+  position: relative;
+}
+.box-3 {
+  width: 400px;
+  height: 800px;
+  background-color: rgb(186, 206, 228);
+  left: 1135px;
+  bottom: 890px;
+  margin-top: 50px;
+  z-index: 3;
   position: relative;
 }
